Fixed Z-index issue on search tab

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -569,6 +569,10 @@ button:focus {
     height: 1px;
 }
 
+.dropdown-content.select-dropdown {
+    z-index: 2;
+}
+
 .not-available {
     position: absolute;
     color: red;
